Filter gap issue solved

--- a/shopping.css
+++ b/shopping.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-
+    padding: 0px;
 }
 
 
@@ -8,14 +8,16 @@ body {
 /* Nav Bar and Title */
 
 nav {
-
     background-color: #FFB801;
     text-align: center;
+
+    
 }
 
 nav > #select-tabs {
     background-color: #FFC634;
     line-height: 40px;
+
 }
 
 nav > #select-tabs > a {
@@ -51,9 +53,8 @@ h1 {
     position: absolute;
     left: 20px;
     top: 30px;
-    z-index: 10;
-    z-index: 10;
-
+    z-index: 50;
+  
 }
 
 /* /Nav Bar and Title */
@@ -181,23 +182,28 @@ a:hover {
     display: flex;
     align-items: center;
     
-    position: absolute; /*make relative*/
-    left: 0px;
-    top: 160px;
-
+    /*make relative*/
     font-family: sriracha;
     
     border-style: solid;
     border-color:rgb(47, 153, 121);
     box-sizing: border-box;
 
-    z-index: 10;
+  
+    
 }
 
 #shop-filter-all {
     opacity: 50%;
     transition: opacity 0.25s ease;
+    left: 0;
+    width: 100%;
+    position: absolute;
+
+    
+
 }
+
 
 #shop-filter-all:hover {
     opacity: 100%;
@@ -223,19 +229,22 @@ main #x-icon {
 }
 
 main {
-
-    text-align: center;
-    margin: 10px auto;
+     text-align: center;
+     margin: 0;
 }
 
 /* Filter buttons */
 
 #sorting-options {
-
-    top: 200px;
-    position: absolute; /*make relative*/
+    position: relative; /*make relative*/
     display: none;
     /*display: block; once visible*/
+    z-index: 1009;
+    margin: 0;
+    padding: 0;
+    
+    
+   
 }
 
 button {
@@ -252,7 +261,6 @@ button:hover {
 }
 
 #color-filter {
-    
     padding-left: 5px;
  
 }
